# opentagit

./: Cargo.toml
crates/tagit-changelog/: Cargo.toml
crates/tagit-changelog/src/: lib.rs
crates/tagit-core/: CHANGELOG.md  Cargo.toml
crates/tagit-core/src/: lib.rs
src/: lib.rs
xtask/: Cargo.toml
