[package]
name = "tagit-core"
version = "0.0.0-a.0"
description = "core functionality of tagit"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
owo-colors.workspace = true
semver.workspace = true
static_assertions.workspace = true
